// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner test SpinnerSize 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    aria-label="Spinner"
    className=
        ms-Spinner
        {
          align-items: center;
          display: flex;
          flex-direction: column-reverse;
          justify-content: center;
        }
  >
    <div
      className=
          ms-Spinner-circle
          ms-Spinner--xSmall
          {
            animation-duration: 1.3s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);};
            animation-timing-function: cubic-bezier(.53,.21,.29,.67);
            border-radius: 50%;
            border-top-color: #0078d4;
            border: 1.5px solid #c7e0f4;
            box-sizing: border-box;
            height: 12px;
            width: 12px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            border-top-color: Highlight;
            forced-color-adjust: none;
          }
    />
    <div
      className=
          ms-Spinner-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #0078d4;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
            text-align: center;
          }
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`Spinner test SpinnerSize 2`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    aria-label="Spinner"
    className=
        ms-Spinner
        {
          align-items: center;
          display: flex;
          flex-direction: column-reverse;
          justify-content: center;
        }
  >
    <div
      className=
          ms-Spinner-circle
          ms-Spinner--small
          {
            animation-duration: 1.3s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);};
            animation-timing-function: cubic-bezier(.53,.21,.29,.67);
            border-radius: 50%;
            border-top-color: #0078d4;
            border: 1.5px solid #c7e0f4;
            box-sizing: border-box;
            height: 16px;
            width: 16px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            border-top-color: Highlight;
            forced-color-adjust: none;
          }
    />
    <div
      className=
          ms-Spinner-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #0078d4;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
            text-align: center;
          }
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`Spinner test SpinnerSize 3`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    aria-label="Spinner"
    className=
        ms-Spinner
        {
          align-items: center;
          display: flex;
          flex-direction: column-reverse;
          justify-content: center;
        }
  >
    <div
      className=
          ms-Spinner-circle
          ms-Spinner--medium
          {
            animation-duration: 1.3s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);};
            animation-timing-function: cubic-bezier(.53,.21,.29,.67);
            border-radius: 50%;
            border-top-color: #0078d4;
            border: 1.5px solid #c7e0f4;
            box-sizing: border-box;
            height: 20px;
            width: 20px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            border-top-color: Highlight;
            forced-color-adjust: none;
          }
    />
    <div
      className=
          ms-Spinner-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #0078d4;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
            text-align: center;
          }
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`Spinner test SpinnerSize 4`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    aria-label="Spinner"
    className=
        ms-Spinner
        {
          align-items: center;
          display: flex;
          flex-direction: column-reverse;
          justify-content: center;
        }
  >
    <div
      className=
          ms-Spinner-circle
          ms-Spinner--large
          {
            animation-duration: 1.3s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);};
            animation-timing-function: cubic-bezier(.53,.21,.29,.67);
            border-radius: 50%;
            border-top-color: #0078d4;
            border: 1.5px solid #c7e0f4;
            box-sizing: border-box;
            height: 28px;
            width: 28px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            border-top-color: Highlight;
            forced-color-adjust: none;
          }
    />
    <div
      className=
          ms-Spinner-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #0078d4;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
            text-align: center;
          }
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`Spinner theme 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    aria-label="Spinner"
    className=
        ms-Spinner
        {
          align-items: center;
          display: flex;
          flex-direction: column-reverse;
          justify-content: center;
        }
  >
    <div
      className=
          ms-Spinner-circle
          ms-Spinner--medium
          {
            animation-duration: 1.3s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);};
            animation-timing-function: cubic-bezier(.53,.21,.29,.67);
            border-radius: 50%;
            border-top-color: #test-primary;
            border: 1.5px solid #c7e0f4;
            box-sizing: border-box;
            height: 20px;
            width: 20px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            -ms-high-contrast-adjust: none;
            border-top-color: Highlight;
            forced-color-adjust: none;
          }
    />
    <div
      className=
          ms-Spinner-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #test-primary;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            margin-bottom: 8px;
            margin-left: 0;
            margin-right: 0;
            margin-top: 0;
            text-align: center;
          }
    >
      Loading...
    </div>
  </div>
</div>
`;
